@@ -1,0 +1,8 @@
+extern void par (void);
+
+int
+main (void)
+{
+  par ();
+  return 0;
+}
