@@ -1,0 +1,6 @@
+#include <stdio.h>
+
+void par (void)
+{
+  printf ("par\n");
+}
